--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock-Paper-Scissors</title>
-    <script src="index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <div id="selection"></div>
+    <div id="score"></div>
+    <div id="points"></div>
+    <div id="result"></div>
+  </body>
+  <script src="index.js"></script>
 </html>
